--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -1,4 +1,8 @@
 {
   "name": "module",
-  "packageManager": "yarn@3.2.0"
+  "version": "0.0.0",
+  "packageManager": "yarn@3.2.0",
+  "scripts": {
+    "start": "npx tool"
+  }
 }
