--- a/packages/tool/package.json
+++ b/packages/tool/package.json
@@ -1,16 +1,16 @@
 {
   "name": "tool",
+  "version": "0.0.0",
   "packageManager": "yarn@3.2.0",
+  "bin": "src/index.js",
+  "scripts": {
+    "start": "npx tool"
+  },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-beta.20",
-    "@docusaurus/theme-classic": "^2.0.0-beta.20"
-  },
-  "devDependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
-  },
-  "peerDependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "@docusaurus/theme-classic": "^2.0.0-beta.20",
+    "@yarnpkg/shell": "^4.0.0-rc.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
