--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -4,5 +4,8 @@
   "packageManager": "yarn@3.2.0",
   "scripts": {
     "start": "npx tool"
+  },
+  "dependencies": {
+    "tool": "../tool"
   }
 }
