--- a/packages/tool/package.json
+++ b/packages/tool/package.json
@@ -1,10 +1,9 @@
 {
   "name": "tool",
   "version": "0.0.0",
-  "packageManager": "yarn@3.2.0",
   "bin": "src/index.js",
   "scripts": {
-    "start": "npx tool"
+    "start": "tool"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-beta.20",
