--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "loader-needed",
   "version": "0.0.0",
-  "packageManager": "yarn@3.2.0",
-  "workspaces": [
-    "packages/*"
-  ]
+  "workspaces": [ "packages/module", "packages/tool" ]
+
 }
